logs/flask-statics-helper.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Statics_Helper-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_statics'...
Listing './lib/python3.5/site-packages/flask_statics/static'...
Listing './lib/python3.5/site-packages/flask_statics/static/BootstrapValidator'...
Listing './lib/python3.5/site-packages/flask_statics/static/BootstrapValidator/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/BootstrapValidator/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/BootstrapValidator/js/language'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/AutoFill'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/AutoFill/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/AutoFill/images'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/AutoFill/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColReorder'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColReorder/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColReorder/images'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColReorder/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColVis'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColVis/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/ColVis/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedColumns'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedColumns/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedColumns/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedHeader'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedHeader/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/FixedHeader/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/KeyTable'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/KeyTable/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/KeyTable/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Responsive'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Responsive/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Responsive/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Scroller'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Scroller/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Scroller/images'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/Scroller/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools/images'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools/images/psd'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/extensions/TableTools/swf'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/images'...
Listing './lib/python3.5/site-packages/flask_statics/static/DataTables/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular/docs'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular/docs/components'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular/docs/components/marked-0.3.2'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular/docs/components/marked-0.3.2/lib'...
Listing './lib/python3.5/site-packages/flask_statics/static/angular/i18n'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap/fonts'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap-growl'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap3-editable'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap3-editable/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap3-editable/img'...
Listing './lib/python3.5/site-packages/flask_statics/static/bootstrap3-editable/js'...
Listing './lib/python3.5/site-packages/flask_statics/static/csshake'...
Listing './lib/python3.5/site-packages/flask_statics/static/d3'...
Listing './lib/python3.5/site-packages/flask_statics/static/font-awesome'...
Listing './lib/python3.5/site-packages/flask_statics/static/font-awesome/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/font-awesome/fonts'...
Listing './lib/python3.5/site-packages/flask_statics/static/jquery'...
Listing './lib/python3.5/site-packages/flask_statics/static/typeahead'...
Listing './lib/python3.5/site-packages/flask_statics/static/whhg-font'...
Listing './lib/python3.5/site-packages/flask_statics/static/whhg-font/css'...
Listing './lib/python3.5/site-packages/flask_statics/static/whhg-font/font'...
Listing './lib/python3.5/site-packages/flask_statics/templates'...
Listing './lib/python3.5/site-packages/flask_statics/templates/flask_statics_helper'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
